# Gravebound

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Gravebound_Ashen_Veil_GDD.html  Gravebound_Content_Production_Spec_v1.md  Gravebound_Development_Roadmap_v1.md  Gravebound_Production_GDD_v1_Canonical.md  README.md  docker-compose.persistence.yml
crates/client_bevy/: Cargo.toml
crates/client_bevy/src/: accessibility.rs  arena_view.rs  bargain_feedback.rs  bargain_ui.rs  combat.rs  consumable.rs  core_caldus_showcase.rs  core_consumable.rs  core_death_frame_probe.rs  core_death_view_showcase.rs  core_encounter_showcase.rs  core_equipment_showcase.rs  core_identity.rs  core_item_lifecycle_showcase.rs  core_private_life.rs  core_private_route.rs  core_resolution_hold_showcase.rs  core_successor_recovery_showcase.rs  core_transition_showcase.rs  core_world_showcase.rs  core_world_transition.rs  death.rs  death_view_ui.rs  debug_overlay.rs  developer_tools.rs  encounter.rs  enemies.rs  inventory.rs  item_showcase.rs  lib.rs  main.rs  native_crash_report.rs  network_play.rs  network_prediction.rs  network_session.rs  network_transport.rs  oath_feedback.rs  oath_ui.rs  player.rs  progression_hud.rs  (+7 more)
crates/content_schema/: Cargo.toml
crates/content_schema/src/: core_caldus.rs  core_encounter_room.rs  lib.rs  production_item.rs  production_oath_bargain.rs
crates/network_harness/: Cargo.toml
crates/network_harness/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: active_danger_authority.rs  ash_wallet.rs  bargain.rs  bargain_cleanup.rs  bargain_events.rs  bargain_milestone.rs  caldus_victory.rs  combat_loadout.rs  core_consumable.rs  danger_checkpoint.rs  danger_crash_restore.rs  danger_crash_restore_repository.rs  danger_entry_restore.rs  death_live_trace_promotion.rs  death_terminal_signature.rs  death_terminal_signature_repository.rs  death_view_repository.rs  durable_death.rs  durable_death_repository.rs  durable_terminal_recovery.rs  extraction.rs  extraction_terminal.rs  extraction_terminal_recovery.rs  extraction_terminal_repository.rs  field_equipment.rs  ground_expiry.rs  identity.rs  items.rs  lib.rs  life_clock_repository.rs  life_deed_repository.rs  lifecycle_signature.rs  live_damage_trace_repository.rs  oath.rs  private_death_context_repository.rs  private_life_bootstrap.rs  private_route_generation.rs  production_extraction_intent.rs  progression.rs  progression_restore.rs  (+13 more)
crates/persistence/tests/: postgres_durable_death.rs  postgres_extraction_terminal.rs  postgres_foundation.rs  postgres_live_death_evidence.rs  postgres_private_route_generation.rs  postgres_production_extraction_intent.rs  postgres_recall_terminal.rs  postgres_telemetry_sources.rs  postgres_terminal_telemetry_origins.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: account.rs  bargain.rs  bounded.rs  codec.rs  core_combat_presentation.rs  core_consumable.rs  core_pending_inventory.rs  core_private_route.rs  death_view.rs  field_equipment.rs  hall_interaction.rs  handshake.rs  lib.rs  messages.rs  native_crash.rs  network_diagnostics.rs  oath.rs  progression.rs  reliable_inbox.rs  resolution_hold.rs  safe_inventory.rs  safe_storage.rs  successor.rs  terminal_inventory.rs  world_flow.rs
crates/server_app/: Cargo.toml
crates/server_app/src/: ash_wallet.rs  bargain_milestone.rs  bargain_selection.rs  caldus_extraction.rs  caldus_instance_presentation.rs  caldus_victory.rs  combat_factory.rs  core_b3_reward.rs  core_extraction_runtime.rs  core_journey_world_flow.rs  core_lifecycle.rs  core_pending_inventory_projection.rs  core_private_b3_reward_runtime.rs  core_private_caldus_reward.rs  core_private_caldus_reward_runtime.rs  core_private_caldus_runtime.rs  core_private_combat_frame.rs  core_private_fixed_dungeon_runtime.rs  core_private_gameplay_observation.rs  core_private_hall_runtime.rs  core_private_life_foundation.rs  core_private_life_process.rs  core_private_life_runtime_bootstrap.rs  core_private_life_server.rs  core_private_life_session.rs  core_private_life_tick.rs  core_private_microrealm_driver.rs  core_private_microrealm_runtime.rs  core_private_player_damage.rs  core_private_telemetry_session.rs  core_private_telemetry_worker.rs  core_private_terminal_feed.rs  core_private_terminal_owner.rs  core_private_world_flow.rs  core_recall_outbox.rs  core_recall_runtime.rs  core_reliable_writer.rs  core_terminal_coordinator.rs  core_terminal_recovery_delivery.rs  death_entity_identity.rs  (+37 more)
crates/server_app/tests/: bot_journey.rs  core_private_life_journey.rs  core_route_quic.rs  death_branch_matrix.rs  death_concurrency.rs  death_custody_matrix.rs  death_memory_soak.rs  death_post_terminal_rejection.rs  ingress_abuse.rs  m02_soak.rs  network_impairment.rs  postgres_ash_wallet.rs  postgres_bargain.rs  postgres_caldus_victory.rs  postgres_danger_crash_restore.rs  postgres_field_equipment.rs  postgres_identity.rs  postgres_progression_restore.rs  postgres_safe_inventory.rs  postgres_successor.rs  postgres_world_flow.rs
crates/sim_content/: Cargo.toml
crates/sim_content/src/: core_abbot_fixture.rs  core_b3_fixed_room.rs  core_dev.rs  core_dev_caldus.rs  core_dev_copy.rs  core_dev_death_view.rs  core_dev_encounter_room.rs  core_dev_oath_bargain.rs  core_dev_progression.rs  core_dev_successor_recovery.rs  core_dev_world_flow.rs  core_fixed_dungeon.rs  core_fixed_room_encounter.rs  core_microrealm_pack.rs  core_mire_fixture.rs  core_private_life_content.rs  lib.rs  production_item.rs  prototype.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: ability.rs  arena.rs  authority.rs  bargain.rs  bargain_offer.rs  boss.rs  boss_encounter.rs  clock.rs  collision.rs  combat.rs  consumable.rs  core_abbot.rs  core_boss_lock.rs  core_caldus.rs  core_caldus_body.rs  core_caldus_encounter.rs  core_caldus_health.rs  core_caldus_victory.rs  core_counterplay.rs  core_enemy.rs  core_enemy_attack.rs  core_enemy_kit.rs  core_enemy_locomotion.rs  core_enemy_runtime.rs  core_knight.rs  damage.rs  (+34 more)
crates/support_lookup/: Cargo.toml
crates/tools_content/: Cargo.toml
(+575 files in other folders)
