[workspace]
members = [
    "crates/bot_client",
    "crates/client_bevy",
    "crates/content_schema",
    "crates/protocol",
    "crates/server_app",
    "crates/sim_content",
    "crates/sim_core",
    "crates/tools_content",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["MikeyPar"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/MikeyPar/Gravebound"

[workspace.dependencies]
anyhow = "=1.0.102"
bevy = { version = "=0.19.0", default-features = false, features = ["2d", "ui", "debug"] }
blake3 = "=1.8.3"
clap = { version = "=4.6.0", features = ["derive"] }
jsonschema = { version = "=0.47.0", default-features = false }
postcard = { version = "=1.1.3", features = ["use-std"] }
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand_chacha = "=0.10.0"
rand_core = "=0.10.1"
rodio = { version = "=0.20.1", default-features = false, features = ["wav"] }
rustls = { version = "=0.23.35", default-features = false, features = ["ring", "std"] }
rcgen = "=0.14.8"
sysinfo = "=0.38.4"
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
walkdir = "=2.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
