[package]
name = "client_bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
blake3.workspace = true
clap.workspace = true
quinn.workspace = true
rodio.workspace = true
protocol = { path = "../protocol" }
rustls.workspace = true
sim_content = { path = "../sim_content" }
sim_core = { path = "../sim_core" }
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "client_bevy"
path = "src/main.rs"
test = false
bench = false

[lints]
workspace = true
