[package]
name = "persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
postcard.workspace = true
serde.workspace = true
sim_core = { path = "../sim_core" }
sqlx.workspace = true
telemetry = { path = "../telemetry" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
