[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
blake3.workspace = true

[lints]
workspace = true
