[package]
name = "server_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
protocol = { path = "../protocol" }
quinn.workspace = true
sim_core = { path = "../sim_core" }
sim_content = { path = "../sim_content" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bot_client = { path = "../bot_client" }
rcgen.workspace = true
rustls.workspace = true

[lints]
workspace = true
