[package]
name = "server_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
content_schema = { path = "../content_schema" }
persistence = { path = "../persistence" }
postcard.workspace = true
protocol = { path = "../protocol" }
quinn.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
sim_core = { path = "../sim_core" }
sim_content = { path = "../sim_content" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
bot_client = { path = "../bot_client" }
client_bevy = { path = "../client_bevy" }
network_harness = { path = "../network_harness" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sysinfo.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
