[package]
name = "sim_content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
content_schema = { path = "../content_schema" }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
sim_core = { path = "../sim_core" }

[lints]
workspace = true
