[package]
name = "support_lookup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
persistence = { path = "../persistence" }
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
